Fix color contrast

--- a/index.screen.css
+++ b/index.screen.css
@@ -80,7 +80,7 @@ fieldset {
 body {
     font-family: Gabarito, sans-serif;
     background: #ece8d6;
-    color: #72726c;
+    color: #606057;
 }
 
 header {
@@ -91,7 +91,7 @@ header {
     padding: 1em;
 
     --logo-color: currentColor;
-    background: #4d4d47;
+    background: #2f2f29;
     color: #fff;
 }
 
@@ -136,7 +136,7 @@ header svg {
     gap: 0.2em;
 
     background: white;
-    color: #72726c;
+    color: #606057;
     border-radius: 1em;
     font-size: 120%;
 }
@@ -172,7 +172,7 @@ header svg {
 #_locationList button {
     padding: 0.5em;
 
-    border: 1px solid #72726c;
+    border: 1px solid #606057;
     border-radius: 0.5em;
     background: transparent;
     text-align: left;
@@ -197,14 +197,14 @@ header svg {
     font-weight: bold;
     letter-spacing: 0.1em;
     text-align: center;
-    background: #72726c;
+    background: #606057;
     color: #ece8d6;
 }
 
 #_weatherForecast h3 {
     margin: 7vw 0 5vw;
 
-    color: #72726c;
+    color: #606057;
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
@@ -241,7 +241,7 @@ header svg {
 
 .grid {
     justify-content: space-between;
-    color: #72726c;
+    color: #606057;
 }
 
 .grid-item {
@@ -324,7 +324,7 @@ header svg {
     height: 1em;
     position: relative;
 
-    border: 1px solid #72726c;
+    border: 1px solid #606057;
     border-radius: 0.5em;
     background-image: linear-gradient(90deg, var(--gradient-stops));
 }
